--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.6",
     "@nestjs/throttler": "^6.5.0",
+    "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.4.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
@@ -46,6 +47,7 @@
     "ioredis": "^5.9.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.18.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
